<resources>
    <string name="app_name">MafiaP2P</string>
    <string name="title_home">Mafia</string>
    <string name="create">CREATE</string>
    <string name="create_room">CREATE ROOM</string>
    <string name="join">JOIN</string>
    <string name="start">Start</string>
    <string name="room">Room</string>
    <string name="game_host">Game Host</string>
    <string name="finish_game">Finish game</string>
    <string name="settings">Settings</string>
    <string name="player_role">Player role</string>
    <string name="button_leave">Leave</string>
    <string name="player_card_description">Player card</string>
    <string name="button_hide_card">Hide card</string>
    <string name="button_show_card">Show card</string>
    <string name="button_back">Back</string>
    <string name="button_kick">Kick</string>
    <string name="button_start_timer" translatable="false">Start timer</string>
    <string name="button_host_open_list">></string>
    <string name="host_image_description">Host image</string>
    <string name="don">Don</string>
    <string name="sheriff">Sheriff</string>
    <string name="doctor">Doctor</string>
    <string name="maniac">Maniac</string>
    <string name="madam">Madam</string>
    <string name="stub" translatable="false">stub</string>
    <string name="mafia_counter">Mafia</string>
    <string name="player_counter">Player</string>
    <string name="select_room">Select room</string>
    <string name="players_stub">players: 3</string>
    <string name="room_stub">Room 1</string>
    <string name="number_stub">01</string>
    <string name="wrong_players">Wrong players number!</string>
    <string name="group_members">Group members:</string>
    <string name="cancel">Cancel</string>
    <string name="card_back">Hidden</string>
    <string name="mafia">Mafia</string>
    <string name="citizen">Citizen</string>
</resources>
